<resources>
    <string name="app_name">TARUC Job2U</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_report">Report</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="post_category">Category</string>
    <string name="gender">Gender</string>
    <string name="maximum_salary">Maximum Salary</string>
    <string name="minimum_salary">Minimum Salary</string>
    <string name="post_job">Post Job</string>
    <string name="salary_range">Salary Range</string>
    <string name="company_name">Company</string>
    <string name="job_title">Job Position</string>
    <string name="requirement">Requirement</string>
    <string name="post_date">Post Date</string>
    <string name="tags">Tags</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_profession">Enter Profession</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="prefer_not_to_mention">Prefer Not To Mention</string>
    <string name="choose_interest">Choose Interest</string>
    <string name="sales">Sales</string>
    <string name="office">Office</string>
    <string name="food_and_beverage"><![CDATA[Food & Beverage]]></string>
    <string name="software">Software</string>
    <string name="network">Network</string>
    <string name="account">Account</string>
    <string name="engineering">Engineering</string>
    <string name="customer_service">Customer Service</string>
    <string name="warehouse">Warehouse</string>
    <string name="security">Security</string>
    <string name="register">Register</string>
    <string name="go_to_login">Go To Login</string>
    <string name="go_to_register_company">Go To Register Company</string>
    <string name="title_register">Register User</string>
    <string name="enter_password">Enter Password (>5)</string>
    <string name="language">Language</string>
    <string name="login">Login</string>
    <string name="register_company">Register Company</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="malay">Malay</string>
    <string name="tamil">Tamil</string>
    <string name="login_user">Login User</string>
    <string name="login_company">Login Company</string>
    <string name="go_to_register_user">Go To Register User</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_description">Enter Description</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="description">Description</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="jobs">Jobs</string>
    <string name="log_out">Log Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="view_profile">View Profile</string>
    <string name="name">Name</string>
    <string name="profession">Profession</string>
    <string name="interest">Interest</string>
    <string name="update">Update</string>
    <string name="edit_company">Edit Company</string>
    <string name="edit_user">Edit User</string>
    <string name="company">Company</string>
    <string name="job">Job</string>
</resources>
