<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayoutRegisterCompany"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.profile.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewChooseImageCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/choose_picture"
                tools:layout_conversion_absoluteHeight="19dp"
                tools:layout_conversion_absoluteWidth="97dp" />

            <ImageView
                android:id="@+id/imageViewImageUploadCompany"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:clickable="true"
                app:srcCompat="@drawable/ic_account_circle_green_24dp"
                tools:layout_conversion_absoluteHeight="150dp"
                tools:layout_conversion_absoluteWidth="150dp" />

            <EditText
                android:id="@+id/editTextNameCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="32dp"
                android:hint="@string/enter_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextPasswordCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="32dp"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editTextEmailCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="32dp"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/editTextPhoneCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="32dp"
                android:hint="@string/enter_phone"
                android:inputType="textPhonetic" />


            <EditText
                android:id="@+id/editTextAddressCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="32dp"
                android:hint="@string/enter_address"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/editTextDescriptionCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="32dp"
                android:hint="@string/enter_description"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/buttonRegisterCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="32dp"
                android:background="@color/colorAccent"
                android:text="@string/register"
                android:textColor="@android:color/white" />

            <ProgressBar
                android:id="@+id/progressBarRegisterCompany"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp" />

            <TextView
                android:id="@+id/textViewGoLoginFromCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:clickable="true"
                android:text="@string/go_to_login"
                android:textColor="@color/design_default_color_primary"
                app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

            <TextView
                android:id="@+id/textViewGoRegisterUserFromCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:text="@string/go_to_register_user"
                android:textColor="@color/design_default_color_primary"
                app:layout_constraintTop_toBottomOf="@+id/textViewGoLoginFromCompany" />
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>